# Offline-Messenger

./: Cargo.toml  README.md  info.db
src/: criptare.rs  lib.rs  protocol.rs
